# aula17_bootcamp

./: desafio.db  desafio.py  desafio_query.py  exemplo.py  pyproject.toml
