[project]
name = "aula17-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "VanthuirMaia",email = "vanmaiasf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.39,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
